--- a/ControleDeContatos/appsettings.json
+++ b/ControleDeContatos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost;Database=DB_SistemaContatos;User=root;Password=04082024"
+  },
   "AllowedHosts": "*"
 }
